# libusbmuxd

./: .travis.yml  CMakeLists.txt  appveyor.yml  azure-pipelines.yml  libusbmuxd.vcxproj  make-deb.sh
common/: socket.c
debian/: libusbmuxd4.symbols
include/: usbmuxd.h
src/: libusbmuxd.c  msc_config.h
tools/: iproxy.c  iproxy.vcxproj  packages.config
